--- a/config.toml
+++ b/config.toml
@@ -108,8 +108,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
    [[params.work.row]]
     category = "announcements.png"
     img = "hans_interview.png"
-    alt = "Hans interview"
-    title = "Hans interview"
+    alt = "Interview on career-changing events"
+    title = "Interview on career-changing events"
     subtitle = "01/2022 - Hans Rocha IJzerman was interviewed by De Psycholoog to discuss what inspires him in research."
     url = ""
 
