--- a/config.toml
+++ b/config.toml
@@ -107,6 +107,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
    [[params.work.row]]
     category = "announcements.png"
+    img = "alone together.png"
+    alt = "Hans interviewed for a podcast"
+    title = "Hans interviewed for a podcast"
+    subtitle = "01/2022 - Hans Rocha IJzerman was interviewed about Heartwarming for the Alone Together podcast by Peg Fong."
+    url = "https://apostrophepodcasts.ca/turn-up-the-heat-how-temperature-affects-relationships/"
+
+   [[params.work.row]]
+    category = "announcements.png"
     img = "hans_interview.png"
     alt = "Interview on career-changing events"
     title = "Interview on career-changing events"
@@ -193,13 +201,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     subtitle = "05/2021 - The Human Behavior & Evolution Society recommended Hans' last book 'Heartwarming'."
     url = "https://i.imgur.com/n4p04nF.jpeg"
 
-    [[params.work.row]]
-    category = "announcements.png"
-    img = "osf.png"
-    alt = "ISCTE-IUL"
-    title = "Registered Reports workshop"
-    subtitle = "03/2021 - Patrick Forscher taught a workshop on Registered Reports for the Lisbon University Institute."
-    url = "https://osf.io/m9bzh/"
+#    [[params.work.row]]
+#    category = "announcements.png"
+#    img = "osf.png"
+#    alt = "ISCTE-IUL"
+#    title = "Registered Reports workshop"
+#    subtitle = "03/2021 - Patrick Forscher taught a workshop on Registered Reports for the Lisbon University Institute."
+#    url = "https://osf.io/m9bzh/"
 
 #    [[params.work.row]]
 #    category = "announcements.png"
