--- a/config.toml
+++ b/config.toml
@@ -123,6 +123,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
    [[params.work.row]]
     category = "announcements.png"
+    img = "alone together.png"
+    alt = "Hans interviewed for a podcast"
+    title = "Hans interviewed for a podcast"
+    subtitle = "01/2022 - Hans Rocha IJzerman was interviewed about Heartwarming for the Alone Together podcast by Peg Fong."
+    url = "https://apostrophepodcasts.ca/turn-up-the-heat-how-temperature-affects-relationships/"
+
+   [[params.work.row]]
+    category = "announcements.png"
     img = "hans_interview.png"
     alt = "Interview on career-changing events"
     title = "Interview on career-changing events"
@@ -193,13 +201,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     subtitle = "05/2021 - Our lab philosophy has been covered in the University newspaper of Free University, Amsterdam."
     url = "https://www.advalvas.vu.nl/en/verhalen/stop-being-self-satisfied-talk-about-your-mistakes"
 
-    [[params.work.row]]
-    category = "announcements.png"
-    img = "osf.png"
-    alt = "KLI workshop"
-    title = "KLI Exploratory Data Analysis workshop"
-    subtitle = "05/2021 - Anna & Olivier taught a workshop on Exploratory Data Analysis for the Kurt Lewin Institute."
-    url = "https://osf.io/8vapw/"
+#    [[params.work.row]]
+#    category = "announcements.png"
+#    img = "osf.png"
+#    alt = "KLI workshop"
+#    title = "KLI Exploratory Data Analysis workshop"
+#    subtitle = "05/2021 - Anna & Olivier taught a workshop on Exploratory Data Analysis for the Kurt Lewin Institute."
+#    url = "https://osf.io/8vapw/"
 
 #    [[params.work.row]]
 #    category = "announcements.png"
