--- a/config.toml
+++ b/config.toml
@@ -618,17 +618,17 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       alt = "butler"
 
     [[params.testimonials.item]]
-      person = '<a href="https://www.su.se/english/profiles/tamm-1.182300">Maria Koptjesvakaja-Tamm</a><br> Stockholm University'
+      person = '<a href="https://www.su.se/english/profiles/tamm-1.182300"> Koptjesvakaja-Tamm</a><br> Stockholm University'
       img = "tamm.jpeg"
       alt = "tamm"
 
     [[params.testimonials.item]]
-      person = '<a href="http://julianneholtlunstad.byu.edu/">Julianne Holt-Lunstad</a><br> Brigham Young University'
+      person = '<a href="http://julianneholtlunstad.byu.edu/"> Holt-Lunstad</a><br> Brigham Young University'
       img = "holtlunstad.jpeg"
       alt = "holtlunstad"
 
     [[params.testimonials.item]]
-      person = '<a href="http://www.ru.nl/english/people/hasselman-f/">Fred Hasselman</a><br>Radboud University Nijmegen'
+      person = '<a href="http://www.ru.nl/english/people/hasselman-f/"> Hasselman</a><br>Radboud University Nijmegen'
       img = "hasselman.jpg"
       alt = "hasselman"
 
@@ -638,7 +638,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       alt = "ratliff"
 
     [[params.testimonials.item]]
-      person = '<a href="https://psysciacc.org/">Psych Science Accelerator</a><br>Worldwide Collaboration'
+      person = '<a href="https://psysciacc.org/">Psych Science Accelerator</a><br>Collaboration'
       img = "psa.png"
       alt = "psa"
 
@@ -658,7 +658,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       alt = "lindenberg"
 
     [[params.testimonials.item]]
-      person = '<a href="https://sites.google.com/site/michelangelovianello/">Michelangelo Vianello</a><br>University of Padova'
+      person = '<a href="https://sites.google.com/site/michelangelovianello/"> Vianello</a><br>University of Padova'
       img = "vianello.jpeg"
       alt = "vianello"
 
@@ -674,12 +674,12 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       
 # I shortened the description for in-mind -- longer descriptions seem to mess up the formatting in this section      
       [[params.testimonials.item]] 
-      person = '<a href="http://www.in-mind.org">In-Mind Foundation</a><br>Popular Psychology Journal'
+      person = '<a href="http://www.in-mind.org">In-Mind </a><br>Popular Psychology Journal'
       img = "inmind.png"
       alt = "inmind"
       
       [[params.testimonials.item]] 
-      person = '<a href="https://research.vu.nl/en/persons/paula-sterkenburg">Paula Sterkenburg</a><br>Vrije Universiteit Amsterdam'
+      person = '<a href="https://research.vu.nl/en/persons/paula-sterkenburg"> Sterkenburg</a><br>Vrije Universiteit Amsterdam'
       img = "Paula_Sterkenburg.jpg"
       alt = "sterkenburg"
       
@@ -694,7 +694,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       alt = "lavner"
       
       [[params.testimonials.item]] 
-      person = '<a href="http://emotionregulationlab.com/?page_id=41">Mattie Tops</a><br>Vrije Universiteit Amsterdam'
+      person = '<a href="http://emotionregulationlab.com/?page_id=41"> Tops</a><br>Vrije Universiteit Amsterdam'
       img = "tops.jpeg"
       alt = "tops"
       
