--- a/config.toml
+++ b/config.toml
@@ -519,6 +519,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     social = [
       ["icon-globe", "https://www.lippc2s.fr/person/adetula-adeyemi/"],
       ["icon-folder", "https://drive.google.com/file/d/1NfQlMEQGfCXOGPCzKzmZVDfbVxFKEHoF/view"]
+      ["icon-twitter", "https://twitter.com/AdeyemiAdetula1?s=20&t=2ZBgSatsy388e0UJFomRCA"]
     ]   
    
    [[params.about.item]]
