--- a/config.toml
+++ b/config.toml
@@ -543,7 +543,20 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       social = [
         ["icon-google", "https://scholar.google.com.ua/citations?user=aQDDGkIAAAAJ&hl=uk"]
       ]
-   
+      
+   [[params.about.item]]
+name = '<a>Ronan Bellemin</a>'
+position = "Core Lab Manager"
+description = "Intern as lab manager. Will work on several projects related to social thermoregulation, emotions, and sexual behaviors."
+img = "ronan.png"
+alt = "Ronan Bellemin"
+social = [
+["icon-google", "https://scholar.google.com/citations?hl=fr&user=rFMUpAEAAAAJ"],
+["icon-folder", "https://osf.io/profile/"],
+["icon-twitter", "https://twitter.com/BelleminRonan"]
+]
+
+
    [[params.about.item]]
     name = '<a href="bastien.paris@etu.univ-grenoble-alpes.fr">Bastien Paris</a>'
     position = "MA Student"
