--- a/config.toml
+++ b/config.toml
@@ -107,6 +107,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [[params.work.row]]
     category = "announcements.png"
+    img = "bjkspodcast.jpg"
+    alt = "Adeyemi interviewed for a podcast"
+    title = "Adeyemi interviewed for a podcast"
+    subtitle = "Adeyemi Adetula was interviewed about the Manylabs Africa Project by bjks podcast"
+    url = https://bjks.buzzsprout.com/1390924/11376718-63-adeyemi-adetula-manylabs-africa-psychology-should-generalise-from-africa-and-multicultural-collaborations
+    
+    [[params.work.row]]
+    category = "announcements.png"
     img = "climatechange.jpg"
     alt = "Will climate crisis affect our sex lives?"
     title = "Will the climate crisis affect our sex lives?"
@@ -193,13 +201,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     subtitle = "05/2021 - Hans Rocha IJzerman’s book Heartwarming was featured in a recent Radiolab episode!"
     url = "https://podcasts.apple.com/fr/podcast/radiolab/id152249110?l=en&i=1000520639850"
 
-    [[params.work.row]]
-    category = "announcements.png"
-    img = "labphilosophy.png"
-    alt = "lab philosophy"
-    title = "Media coverage of our lab philosophy"
-    subtitle = "05/2021 - Our lab philosophy has been covered in the University newspaper of Free University, Amsterdam."
-    url = "https://www.advalvas.vu.nl/en/verhalen/stop-being-self-satisfied-talk-about-your-mistakes"
+#    [[params.work.row]]
+#    category = "announcements.png"
+#    img = "labphilosophy.png"
+#    alt = "lab philosophy"
+#    title = "Media coverage of our lab philosophy"
+#    subtitle = "05/2021 - Our lab philosophy has been covered in the University newspaper of Free University, Amsterdam."
+#    url = "https://www.advalvas.vu.nl/en/verhalen/stop-being-self-satisfied-talk-about-your-mistakes"
 
 #    [[params.work.row]]
 #    category = "announcements.png"
